compile-tests/fixtures/compile-errors/instantiation-too-many-type-parameters/input.ts
import createValidator, { registerType } from "../../../../dist/typecheck.macro";

interface Foo<T> {}
registerType("Foo");
createValidator<Foo<string, number>>();
